--- a/TourAgencyServer/TourAgencyServer.csproj
+++ b/TourAgencyServer/TourAgencyServer.csproj
@@ -132,25 +132,28 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\TourCategoriesController.cs" />
-    <Compile Include="Models\city.cs" />
-    <Compile Include="Models\country.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\city.cs" />
+    <Compile Include="Models\country.cs" />
     <Compile Include="Models\hotel.cs" />
     <Compile Include="Models\hotelcategory.cs" />
     <Compile Include="Models\image.cs" />
     <Compile Include="Models\nutrition.cs" />
     <Compile Include="Models\order.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\request.cs" />
     <Compile Include="Models\role.cs" />
     <Compile Include="Models\status.cs" />
     <Compile Include="Models\tour.cs" />
     <Compile Include="Models\tourcategory.cs" />
+    <Compile Include="Models\TourContext.cs" />
     <Compile Include="Models\tourinstance.cs" />
-    <Compile Include="Models\TourModel.cs" />
     <Compile Include="Models\user.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ImageInfo.cs" />
+    <Compile Include="Service\TourCategoryInfo.cs" />
+    <Compile Include="Service\TourInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
