--- a/TourAgencyServer/TourAgencyServer.csproj
+++ b/TourAgencyServer/TourAgencyServer.csproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CountriesController.cs" />
     <Compile Include="Controllers\TourCategoriesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -151,6 +152,8 @@
     <Compile Include="Models\tourinstance.cs" />
     <Compile Include="Models\user.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\CityInfo.cs" />
+    <Compile Include="Service\CountryInfo.cs" />
     <Compile Include="Service\ImageInfo.cs" />
     <Compile Include="Service\TourCategoryInfo.cs" />
     <Compile Include="Service\TourInfo.cs" />
