--- a/TourAgencyServer/TourAgencyServer.csproj
+++ b/TourAgencyServer/TourAgencyServer.csproj
@@ -131,8 +131,10 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\CountriesController.cs" />
     <Compile Include="Controllers\TourCategoriesController.cs" />
+    <Compile Include="Controllers\ToursController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
