--- a/TourAgencyServer/TourAgencyServer.csproj
+++ b/TourAgencyServer/TourAgencyServer.csproj
@@ -123,6 +123,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Files\Barhat.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
